Modify the style, make sure the numbers don't overflow the display

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,8 +12,10 @@ body {
   flex-direction: column;
   justify-content: center;
   border: 1px black solid;
+  width: 204px;
+  height: 306px;
   border-radius: 5px;
-  margin-top: 50px;
+  margin-top: 100px;
   padding: 14px 10px 14px 10px;
   background-color: #bbbabc;
   box-shadow: 3px 3px 3px #bbbabc;
@@ -28,14 +30,19 @@ body {
   border: 1px black solid;
   background-color: #f9f9f9;
   box-shadow: 1px 1px 1px #7c7c7c;
+  overflow: hidden;
 }
 .display-top {
   font-size: 16px;
   height: 1em;
+  overflow: hidden;
+  direction: ltr; 
+  white-space: nowrap;
 }
 .display-main {
   font-size: 24px;
   height: 1em;
+  overflow: hidden;
 }
 
 button {
